Add responsive styles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <main class="card">
     <picture class="card__picture">
-      <source srcset="img/article-img-mobile.jpg 1x, img/article-img-mobile@2x.jpg 2x" media="(max-width:900px)">
+      <source srcset="img/article-img-mobile.jpg 1x, img/article-img-mobile@2x.jpg 2x" media="(max-width:40em)">
       <img class="card__img" src="img/article-img-desktop.jpg" alt="Green furniture with decorations on it" width="285" height="280" srcset="img/article-img-desktop.jpg 1x, img/article-img-desktop@2x.jpg 2x">
     </picture>
     <div class="card__body">
